--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   flutter_swiper : ^1.1.6
   http: ^0.12.2
   flutter_webview_plugin: ^0.3.11
-  
+  flutter_staggered_grid_view: ^0.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
